proof-verify: run assigner and proof generator for proof submit
